--- a/isss_prospectus.scss
+++ b/isss_prospectus.scss
@@ -17,7 +17,12 @@ body {
 .main-text{
 	img{
 		float: left;
-		margin: 0px 0px 15px 15px;
+		margin: 0px 0px 0px 15px;
 	}
-	margin-right: 2cm;
+	margin-right: 1.25cm;
+}
+p{
+	margin-top:10px;
+	margin-left: 1cm;
+	margin-right: 1.75cm;
 }
