--- a/isss_propectus.pug
+++ b/isss_propectus.pug
@@ -1,6 +1,6 @@
 .headers
     h1#header Information & Systems Security Society
-    h3 2018-2019 Sponsorship Guide
+    h2 2018-2019 Sponsorship Guide
 
 .main-text
     img(src='transparent.png')
@@ -9,6 +9,15 @@
           
         
         ISSS is seeking corporate sponsors to help fund and host organization events, and to educate students on applications of security in the industry. Through sponsorship, companies can broaden their outreach in the community through hosted events and recruiting opportunities while receiving name recognition within the student body. Job listings and opportunities will be distributed directly to organization members, and companies will have access to resumes from students pursuing careers in cybersecurity. 
+
+h1#Event-header Events
+
+.container2
+    .container1
+        .col1
+            h2 General Meetings
+        .col2
+            p Every other week, ISSS hosts a general meeting or workshop covering a security topic of interest to our members. The aim of these events is to keep our members up to date about security issues, show them how to breach and secure systems in a controlled environment, and teach them how to defend themselves and their software in the real world. 
 
 style
   include:scss isss_prospectus.scss
