--- a/isss_propectus.pug
+++ b/isss_propectus.pug
@@ -8,16 +8,30 @@
         The Information and Systems Security Society (ISSS) is a student run Computer Science organization  at  the  University  of  Texas  at Austin  dedicated  towards  instructing  students  on  the topics of computer security. Through our organization’s events, students are given exposure to both practical and theoretical attacks on real world systems, encouraging students to write better code, design better infrastructure, and defend their privacy and digital freedom in an increasingly connected world.  
           
         
-        ISSS is seeking corporate sponsors to help fund and host organization events, and to educate students on applications of security in the industry. Through sponsorship, companies can broaden their outreach in the community through hosted events and recruiting opportunities while receiving name recognition within the student body. Job listings and opportunities will be distributed directly to organization members, and companies will have access to resumes from students pursuing careers in cybersecurity. 
+        We're seeking corporate sponsors to help fund and host organization events, and to educate students on applications of security in the industry. Through sponsorship, companies can broaden their outreach in the community through hosted events and recruiting opportunities while receiving name recognition within the student body.
 
-h1#Event-header Events
+h1#Event-header Weekly Events
 
 .container2
     .container1
         .col1
-            h2 General Meetings
+            :markdown-it(html=true)
+                ## General Meetings
+                <span style="color:#ff3399">-40+ Students, 1 HOUR</span>
         .col2
-            p Every other week, ISSS hosts a general meeting or workshop covering a security topic of interest to our members. The aim of these events is to keep our members up to date about security issues, show them how to breach and secure systems in a controlled environment, and teach them how to defend themselves and their software in the real world. 
+            :markdown-it(html=true)
+                Every other week, we host a general meeting or workshop covering some interesting security topic.  
+                In the previous semesters, we've covered ROP, Burp Suite, CSRF, and Meltdown/Spectre.
+    .container1
+        .col1
+            :markdown-it(html=true)
+                ## Capture the Flag (CTF) Competitions
+                <span style="color:#ff3399">-70+ Students, 2 HOURS</span>
+        .col2
+            :markdown-it(html=true)
+                Capture the Flag (CTF) competitions are security competitions designed to challenge students’ practical knowledge of system vulnerabilities in a simulated setting.  
+                We host CTF challenges every two weeks written by our officer team. 
+
 
 style
   include:scss isss_prospectus.scss
