--- a/isss_prospectus.scss
+++ b/isss_prospectus.scss
@@ -13,7 +13,7 @@ body {
 }
 
 .headers{
-	padding-left:1cm;
+	padding-left:1.75cm;
 	margin-bottom: .75cm;
 }
 .main-text{
@@ -46,6 +46,7 @@ body {
 	width:100%;
 	position:relative;
 	right:50%;
+	padding-bottom: .5cm;
 }
 .col1 {
 	float:left;
