added all events

--- a/isss_propectus.pug
+++ b/isss_propectus.pug
@@ -17,7 +17,7 @@ h1#Event-header Weekly Events
         .col1
             :markdown-it(html=true)
                 ## General Meetings
-                <span style="color:#ff3399">-40+ Students, 1 HOUR</span>
+                <span style="color:#ff3399">40+ Students, 1 Hour</span>
         .col2
             :markdown-it(html=true)
                 Every other week, we host a general meeting or workshop covering some interesting security topic.  
@@ -26,12 +26,37 @@ h1#Event-header Weekly Events
         .col1
             :markdown-it(html=true)
                 ## Capture the Flag (CTF) Competitions
-                <span style="color:#ff3399">-70+ Students, 2 HOURS</span>
+                <span style="color:#ff3399">70+ Students, 2 Hours</span>
         .col2
             :markdown-it(html=true)
                 Capture the Flag (CTF) competitions are security competitions designed to challenge students’ practical knowledge of system vulnerabilities in a simulated setting.  
-                We host CTF challenges every two weeks written by our officer team. 
-
-
+                We write, host, and cater CTF challenges every two weeks.
+h1#Event-header Special Events
+.container2
+    .container1
+        .col1
+            :markdown-it(html=true)
+                ## Fall Networking Dinner
+                <span style="color:#ff3399">70+ Students, 2 Hours</span>
+        .col2
+            :markdown-it(html=true)
+                The Fall Networking Dinner serves as recruiting opportunities for companies seeking security-minded students, offering a platform for companies to discuss security topics with students in a relaxed environment.
+    .container1
+        .col1
+            :markdown-it(html=true)
+                ## ISSSCTF
+                <span style="color:#ff3399">300+ Students, 3+ Hours</span>
+        .col2
+            :markdown-it(html=true)
+                ISSSCTF is a CTF competition put on during HackTX in a collaborative effort with Freetail Hackers. Much like the biweekly CTFs, the ISSS officer team creates and writes the CTF challenges.
+    
+    .container1
+        .col1
+            :markdown-it(html=true)
+                ## Security Day
+                <span style="color:#ff3399">130+ Students, 8 Hours</span>
+        .col2
+            :markdown-it(html=true)
+                Security Day is a day-long cybsersecurity focused student event hosted in conjunction with the Department of Computer Science that features several technical talks given by Gold/Silver sponsors and faculty and a CTF Competition. All sponsors are more than welcome to contribute prizes for the CTF challenge.
 style
   include:scss isss_prospectus.scss
