--- a/isss_propectus.pug
+++ b/isss_propectus.pug
@@ -57,6 +57,6 @@ h1#Event-header Special Events
                 <span style="color:#ff3399">130+ Students, 8 Hours</span>
         .col2
             :markdown-it(html=true)
-                Security Day is a day-long cybsersecurity focused student event hosted in conjunction with the Department of Computer Science that features several technical talks given by Gold/Silver sponsors and faculty and a CTF Competition. All sponsors are more than welcome to contribute prizes for the CTF challenge.
+                Security Day is a day-long cybsersecurity focused student event hosted in conjunction with the Department of Computer Science that features several technical talks given by Gold/Silver sponsors and a CTF Competition.
 style
   include:scss isss_prospectus.scss
