--- a/isss_propectus.pug
+++ b/isss_propectus.pug
@@ -1,7 +1,7 @@
 .headers
     h1#header Information & Systems Security Society
     h2 2018-2019 Sponsorship Guide
-
+ 
 .main-text
     img(src='transparent.png')
     :markdown-it(html=true)
@@ -9,7 +9,7 @@
 
         We're seeking corporate sponsors to help fund and host organization events, and to educate students on applications of security in the industry. Through sponsorship, companies can broaden their outreach in the community through hosted events and recruiting opportunities while receiving name recognition within the student body.  
 
-h1#Event-header Weekly Events
+h1#Event-header Weekly Events 
 
 .container2
     .container1
@@ -20,7 +20,7 @@ h1#Event-header Weekly Events
         .col2
             :markdown-it(html=true)
                 Every other week, we host a general meeting or workshop covering some interesting security topic.  
-                In the previous semesters, we've covered ROP, Burp Suite, CSRF, and Meltdown/Spectre.
+                In previous semesters, we've covered topics such as ROP, Burp Suite, CSRF, and Meltdown/Spectre.
     .container1
         .col1
             :markdown-it(html=true)
@@ -39,7 +39,7 @@ h1#Event-header Special Events
                 <span style="color:#ff3399">70+ Students, 2 Hours</span>
         .col2
             :markdown-it(html=true)
-                The Fall Networking Dinner serves as recruiting opportunities for companies seeking security-minded students, offering a platform for companies to discuss security topics with students in a relaxed environment.
+                The Fall Networking Dinner serves as a recruiting opportunitie for companies seeking security-minded students, offering a platform for companies to discuss security topics with students in a relaxed environment.
     .container1
         .col1
             :markdown-it(html=true)
@@ -57,5 +57,90 @@ h1#Event-header Special Events
         .col2
             :markdown-it(html=true)
                 Security Day is a day-long cybsersecurity focused student event hosted in conjunction with the Department of Computer Science that features several technical talks given by Gold/Silver sponsors and a CTF Competition.
+
+h1#Sponsor-header Sponsorship Levels
+.Table
+    table
+        thead
+          tr
+            th 
+                :markdown-it(html=true)
+                    # **Level**
+            th
+                :markdown-it(html=true)
+                    # **Benefits**
+            th 
+                :markdown-it(html=true)
+                    # **Scheduling Priority**
+        tbody
+          tr
+            td 
+                center
+                    :markdown-it(html=true)
+                        ## <span style="color:#D4AF37">Gold</span>  
+                        <span style="color:#D4AF37">$2,000</span>
+            td 
+                left
+                    :markdown-it(html=true)
+                        * Host a CTF Competition OR a Custom Event
+                        * Invitation to Networking Dinner (up to 4 representatives)
+                        * All benefits of the Silver level
+            td
+                center
+                    :markdown-it(html=true)
+                        ## 1<sup>st</sup>
+          tr
+            td 
+                center 
+                    :markdown-it(html=true)
+                        ## <span style="color:#BCC6CC">Silver</span>  
+                        <span style="color:#BCC6CC">$1,000</span>
+            td 
+                left
+                    :markdown-it(html=true)
+                        * Host a catered General Meeting (technical talk) / Workshop
+                        * Invitation to Networking Dinner (up to 2 representatives)
+                        * Provide a company presence during Security Day
+                        * Recognition on ISSS T-Shirts and Security Day marketing materials
+                        * Have Access to mini CTF Resume/Solves data
+                        * All benefits of the Bronze level
+            td 
+                center
+                    :markdown-it(html=true)
+                        ## 2<sup>nd</sup>
+          tr.negative
+            td 
+                center
+                    :markdown-it(html=true)
+                        ## <span style="color:#B26F19">Bronze</span>  
+                        <span style="color:#B26F19">$500</span>
+            td 
+                left
+                    :markdown-it(html=true)
+                        * Receive recognition at Semester Kickoffs and on the ISSS website 
+                        * Company career opportunities distributed on community mailing list 
+                        * Be able to contribute problems to our bi-weekly CTFs 
+                        * Access to community resumes
+            td 
+                center
+                    :markdown-it(html=true)
+                        ## N/A
+          tr
+            td 
+                center
+                    :markdown-it(html=true)
+                        ## FoCS  
+                        Non-Sponsor
+            td 
+                left
+                    :markdown-it(html=true)
+                        * Host a General Meeting or Workshop based on availability, ancillary catering cost not included
+            td
+                center
+                    :markdown-it(html=true)
+                        ## 3<sup>rd</sup>
+
+h1#FAQ FAQ
+
 style
   include:scss isss_prospectus.scss
