added prospectus script

--- a/isss_propectus.pug
+++ b/isss_propectus.pug
@@ -139,6 +139,12 @@ h1#Sponsor-header Sponsorship Levels
                 center
                     :markdown-it(html=true)
                         ## 3<sup>rd</sup>
+.Info
+    :markdown-it(html=true)
+        For more information, and to become a sponsor, contact us at [corporate@isss.io](<mailto:corporate@isss.io>). Visit our website at [isss.io](https://www.isss.io/) for the latest organization news and information.
+.Terms
+    :markdown-it(html=true)
+        *Terms and Conditions.* Sponsorship benefits last until the end of the Spring semester of the academic school year. Benefits may be temporarily suspended, due to lack of available funds, for sponsors that have not yet completed the expensing process and confirmed payment with the Department of Computer Science. General meetings and technical talks hosted by sponsors are expected to be educational, respectful of students’ time, and not primarily for the purposes of recruiting. Sponsorship levels, benefits, and prices are subject to change every academic year.
 
 h1#FAQ FAQ
 
