--- a/isss_prospectus.scss
+++ b/isss_prospectus.scss
@@ -88,7 +88,7 @@ body {
 
 .Table{
     margin-left: 1.5cm;
-    margin-right: 1.75cm;
+    margin-right: 1.5cm;
 
 }
 table{
@@ -107,4 +107,16 @@ td {
 }
 #FAQ{
     page-break-before: always;
+}
+.Info{
+    padding-top:.25cm;
+    text-align: center;
+    padding-left: 2cm;
+    padding-right: 2cm;
+}
+.Terms{
+    padding-top: 1cm;
+    padding-left:1.5cm;
+    padding-right:1.5cm;
+    page-break-after: always;
 }
