edit colors, relaigned

--- a/isss_prospectus.pug
+++ b/isss_prospectus.pug
@@ -15,8 +15,8 @@ h1#Event-header Weekly Events
     .container1
         .col1
             :markdown-it(html=true)
-                ## General Meetings
-                <span style="color:#ff3399">40+ Students, 1 Hour</span>
+                ### General Meetings
+                <span style="color:#c6ecd6">40+ Students, 1 Hour</span>
         .col2
             :markdown-it(html=true)
                 Every other week, we host a general meeting or workshop covering some interesting security topic.  
@@ -24,27 +24,26 @@ h1#Event-header Weekly Events
     .container1
         .col1
             :markdown-it(html=true)
-                ## Capture the Flag (CTF) Competitions
-                <span style="color:#ff3399">70+ Students, 2 Hours</span>
+                ### Capture the Flag (CTF) Competitions
+                <span style="color:#c6ecd6">70+ Students, 2 Hours</span>
         .col2
             :markdown-it(html=true)
-                Capture the Flag (CTF) competitions are security competitions designed to challenge students’ practical knowledge of system vulnerabilities in a simulated setting.  
-                We write, host, and cater CTF challenges every two weeks.
+                Capture the Flag (CTF) competitions are security competitions designed to challenge students’ practical knowledge of system vulnerabilities in a simulated setting. We write, host, and cater CTF challenges every two weeks.
 h1#Event-header Special Events
 .container2
     .container1
         .col1
             :markdown-it(html=true)
-                ## Fall Networking Dinner
-                <span style="color:#ff3399">70+ Students, 2 Hours</span>
+                ### Fall Networking Dinner
+                <span style="color:#c6ecd6">70+ Students, 2 Hours</span>
         .col2
             :markdown-it(html=true)
                 The Fall Networking Dinner serves as a recruiting opportunitie for companies seeking security-minded students, offering a platform for companies to discuss security topics with students in a relaxed environment.
     .container1
         .col1
             :markdown-it(html=true)
-                ## ISSSCTF
-                <span style="color:#ff3399">300+ Students, 3+ Hours</span>
+                ### ISSSCTF
+                <span style="color:#c6ecd6">300+ Students, 3+ Hours</span>
         .col2
             :markdown-it(html=true)
                 ISSSCTF is a CTF competition put on during HackTX in a collaborative effort with Freetail Hackers. Much like the biweekly CTFs, the ISSS officer team creates and writes the CTF challenges.
@@ -52,8 +51,8 @@ h1#Event-header Special Events
     .container1
         .col1
             :markdown-it(html=true)
-                ## Security Day
-                <span style="color:#ff3399">130+ Students, 8 Hours</span>
+                ### Security Day
+                <span style="color:#c6ecd6">130+ Students, 8 Hours</span>
         .col2
             :markdown-it(html=true)
                 Security Day is a day-long cybsersecurity focused student event hosted in conjunction with the Department of Computer Science that features several technical talks given by Gold/Silver sponsors and a CTF Competition.
@@ -64,14 +63,17 @@ h1#Sponsor-header Sponsorship Levels
         thead
           tr
             th 
-                :markdown-it(html=true)
-                    # **Level**
+                center
+                    :markdown-it(html=true)
+                        # **Level**
             th
-                :markdown-it(html=true)
-                    # **Benefits**
+                center
+                    :markdown-it(html=true)
+                        # **Benefits**
             th 
-                :markdown-it(html=true)
-                    # **Scheduling Priority**
+                center
+                    :markdown-it(html=true)
+                        # **Scheduling Priority**
         tbody
           tr
             td 
@@ -147,6 +149,10 @@ h1#Sponsor-header Sponsorship Levels
         *Terms and Conditions.* Sponsorship benefits last until the end of the Spring semester of the academic school year. Benefits may be temporarily suspended, due to lack of available funds, for sponsors that have not yet completed the expensing process and confirmed payment with the Department of Computer Science. General meetings and technical talks hosted by sponsors are expected to be educational, respectful of students’ time, and not primarily for the purposes of recruiting. Sponsorship levels, benefits, and prices are subject to change every academic year.
  
 h1#FAQ FAQ
+
+
+.EOP 
+    h1 Last Page. Run the Python Script. Python delete_page.py
 
 style
   include:scss isss_prospectus.scss
