removed FoCS, added formatting to table, realigned everything to 1.5

--- a/isss_prospectus.pug
+++ b/isss_prospectus.pug
@@ -19,12 +19,12 @@ h1#Event-header Weekly Events
                 <span style="color:#c6ecd6">40+ Students, 1 Hour</span>
         .col2
             :markdown-it(html=true)
-                Every other week, we host a general meeting or workshop covering some interesting security topic.  
+                We host a general meeting or workshop every two weeks covering some interesting security topic.  
                 In previous semesters, we've covered topics such as ROP, Burp Suite, CSRF, and Meltdown/Spectre.
     .container1
         .col1
             :markdown-it(html=true)
-                ### Capture the Flag (CTF) Competitions
+                ### Capture the Flag (CTF)
                 <span style="color:#c6ecd6">70+ Students, 2 Hours</span>
         .col2
             :markdown-it(html=true)
@@ -38,7 +38,7 @@ h1#Event-header Special Events
                 <span style="color:#c6ecd6">70+ Students, 2 Hours</span>
         .col2
             :markdown-it(html=true)
-                The Fall Networking Dinner serves as a recruiting opportunitie for companies seeking security-minded students, offering a platform for companies to discuss security topics with students in a relaxed environment.
+                The Fall Networking Dinner serves as a recruiting opportunity for companies seeking security-minded students, offering a platform for companies to discuss security topics with students in a relaxed environment.
     .container1
         .col1
             :markdown-it(html=true)
@@ -101,6 +101,7 @@ h1#Sponsor-header Sponsorship Levels
                 left
                     :markdown-it(html=true)
                         * Host a catered General Meeting (technical talk) / Workshop
+                        
                         * Invitation to Networking Dinner (up to 2 representatives)
                         * Provide a company presence during Security Day
                         * Recognition on ISSS T-Shirts and Security Day marketing materials
@@ -110,7 +111,7 @@ h1#Sponsor-header Sponsorship Levels
                 center
                     :markdown-it(html=true)
                         ## 2<sup>nd</sup>
-          tr.negative
+          tr
             td 
                 center
                     :markdown-it(html=true)
@@ -127,23 +128,10 @@ h1#Sponsor-header Sponsorship Levels
                 center
                     :markdown-it(html=true)
                         ## N/A
-          tr
-            td 
-                center
-                    :markdown-it(html=true)
-                        ## FoCS  
-                        Non-Sponsor
-            td 
-                left
-                    :markdown-it(html=true)
-                        * Host a General Meeting or Workshop based on availability, ancillary catering cost not included
-            td
-                center
-                    :markdown-it(html=true)
-                        ## 3<sup>rd</sup>
+
 .Info
     :markdown-it(html=true)
-        For more information, and to become a sponsor, contact us at [corporate@isss.io](<mailto:corporate@isss.io>). Visit our website at [isss.io](https://www.isss.io/) for the latest organization news and information.
+        ### For more information, and to become a sponsor, contact us at [corporate@isss.io](<mailto:corporate@isss.io>). Visit our website at [isss.io](https://www.isss.io/) for the latest organization news and information.
 .Terms
     :markdown-it(html=true)
         *Terms and Conditions.* Sponsorship benefits last until the end of the Spring semester of the academic school year. Benefits may be temporarily suspended, due to lack of available funds, for sponsors that have not yet completed the expensing process and confirmed payment with the Department of Computer Science. General meetings and technical talks hosted by sponsors are expected to be educational, respectful of students’ time, and not primarily for the purposes of recruiting. Sponsorship levels, benefits, and prices are subject to change every academic year.
