--- a/isss_prospectus.pug
+++ b/isss_prospectus.pug
@@ -19,8 +19,8 @@ h1#Event-header Weekly Events
                 <span style="color:#c6ecd6">40+ Students, 1 Hour</span>
         .col2
             :markdown-it(html=true)
-                We host a general meeting or workshop every two weeks covering some interesting security topic.  
-                In previous semesters, we've covered topics such as ROP, Burp Suite, CSRF, and Meltdown/Spectre.
+                <span style = "text-align: justify">We host a general meeting or workshop every two weeks covering some interesting security topic.  
+                In previous semesters, we've covered topics such as ROP, Burp Suite, CSRF, and Meltdown/Spectre.</span>
     .container1
         .col1
             :markdown-it(html=true)
@@ -28,7 +28,7 @@ h1#Event-header Weekly Events
                 <span style="color:#c6ecd6">70+ Students, 2 Hours</span>
         .col2
             :markdown-it(html=true)
-                Capture the Flag (CTF) competitions are security competitions designed to challenge students’ practical knowledge of system vulnerabilities in a simulated setting. We write, host, and cater CTF challenges every two weeks.
+                <span style = "text-align: justify">Capture the Flag (CTF) competitions are security competitions designed to challenge students’ practical knowledge of system vulnerabilities in a simulated setting. We write, host, and cater CTF challenges every two weeks.</span>
 h1#Event-header Special Events
 .container2
     .container1
@@ -38,7 +38,7 @@ h1#Event-header Special Events
                 <span style="color:#c6ecd6">70+ Students, 2 Hours</span>
         .col2
             :markdown-it(html=true)
-                The Fall Networking Dinner serves as a recruiting opportunity for companies seeking security-minded students, offering a platform for companies to discuss security topics with students in a relaxed environment.
+                <span style = "text-align: justify">The Fall Networking Dinner serves as a recruiting opportunity for companies seeking security-minded students, offering a platform for companies to discuss security topics with students in a relaxed environment.</span>
     .container1
         .col1
             :markdown-it(html=true)
@@ -46,7 +46,7 @@ h1#Event-header Special Events
                 <span style="color:#c6ecd6">300+ Students, 3+ Hours</span>
         .col2
             :markdown-it(html=true)
-                ISSSCTF is a CTF competition put on during HackTX in a collaborative effort with Freetail Hackers. Much like the biweekly CTFs, the ISSS officer team creates and writes the CTF challenges.
+                <span style = "text-align: justify">ISSSCTF is a CTF competition put on during HackTX in a collaborative effort with Freetail Hackers. Much like the biweekly CTFs, the ISSS officer team creates and writes the CTF challenges.</span>
     
     .container1
         .col1
@@ -55,7 +55,7 @@ h1#Event-header Special Events
                 <span style="color:#c6ecd6">130+ Students, 8 Hours</span>
         .col2
             :markdown-it(html=true)
-                Security Day is a day-long cybsersecurity focused student event hosted in conjunction with the Department of Computer Science that features several technical talks given by Gold/Silver sponsors and a CTF Competition.
+                <span style = "text-align: justify">Security Day is a day-long cybsersecurity focused student event hosted in conjunction with the Department of Computer Science that features several technical talks given by Gold/Silver sponsors and a CTF Competition.</span>
 
 h1#Sponsor-header Sponsorship Levels
 .Table
@@ -100,7 +100,7 @@ h1#Sponsor-header Sponsorship Levels
             td 
                 left
                     :markdown-it(html=true)
-                        * Host a catered General Meeting (technical talk) / Workshop
+                        * Host a catered General Meeting (technical talk) OR Workshop
                         
                         * Invitation to Networking Dinner (up to 2 representatives)
                         * Provide a company presence during Security Day
