--- a/isss_prospectus.scss
+++ b/isss_prospectus.scss
@@ -121,8 +121,9 @@ td {
 .Terms{
     padding-top: 1cm;
     padding-left:1.5cm;
-    padding-right:1.3cm;
+    padding-right:1.5cm;
     page-break-after: always;
+    text-align: justify;
 }
 .EOP{
     page-break-before: always;
