--- a/isss_prospectus.pug
+++ b/isss_prospectus.pug
@@ -65,15 +65,15 @@ h1#Sponsor-header Sponsorship Levels
             th 
                 center
                     :markdown-it(html=true)
-                        # **Level**
+                        ## **Level**
             th
                 center
                     :markdown-it(html=true)
-                        # **Benefits**
+                        ## **Benefits**
             th 
                 center
                     :markdown-it(html=true)
-                        # **Scheduling Priority**
+                        ## **Scheduling Priority**
         tbody
           tr
             td 
