--- a/isss_prospectus.scss
+++ b/isss_prospectus.scss
@@ -101,6 +101,9 @@ th {
     padding: 15px;
     border: 1px solid white;
 }
+tr{
+    align: center;
+}
 td {
     text-align: left;
     padding-top: 10px;
