spaced things out more

--- a/isss_prospectus.scss
+++ b/isss_prospectus.scss
@@ -49,7 +49,7 @@ body {
     page-break-before: always;
 	margin-top: 1cm;
 	margin-left: 1.5cm;
-    margin-bottom: .5cm;
+    margin-bottom: 1cm;
 }
 
 #Event-header{
@@ -116,7 +116,7 @@ td {
     page-break-before: always;
 }
 .Info{
-    padding-top:.5cm;
+    padding-top: 1cm;
     text-align: center;
     padding-left: 2cm;
     padding-right: 1.75cm;
